# ArtiApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
include/: app.hpp  imgui.hpp  input.hpp  pixel.hpp  renderer.hpp
include/constants/: colors.hpp  keys.hpp  math.hpp
include/math/: vec2d.hpp
include/utils/: logger.hpp  random.hpp  utils.hpp
src/: app.cpp  input.cpp  pixel.cpp  renderer.cpp
